--- a/FlashCard/MainWindow.xaml
+++ b/FlashCard/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:FlashCard"
         xmlns:Pages="clr-namespace:FlashCard.Pages"
         mc:Ignorable="d"
-        Title="FlashCard" Height="600" Width="1000">
+        Width="600" Height="350"
+        Title="FlashCard" >
     <Grid>
         <DockPanel>
             <Menu DockPanel.Dock="Top">
@@ -21,6 +22,6 @@
                 </MenuItem>
             </Menu>
         </DockPanel>
-        <Grid x:Name="Content" />
+        <Grid x:Name="Content" Margin="0 20" />
     </Grid>
 </Window>
