--- a/FlashCard/MainWindow.xaml
+++ b/FlashCard/MainWindow.xaml
@@ -13,11 +13,13 @@
             <Menu DockPanel.Dock="Top">
                 <MenuItem Header="_Start">
                     <MenuItem Header="_Synonyms" Click="Synonym_Click"/>
+                    <MenuItem Header="_SynonymsReverse" Click="SynonymReverse_Click"/>
                     <MenuItem Header="_Spelling" Click="Spelling_Click" />
                 </MenuItem>
                 <MenuItem Header="_New word">
                     <MenuItem Header="_Single" Click="SingleWord_Click"/>
                     <MenuItem Header="_File" Click="FileWord_Click"/>
+                    <MenuItem Header="_Show" Click="MenuItem_Click" />
                 </MenuItem>
             </Menu>
         </DockPanel>
