--- a/FlashCard/MainWindow.xaml
+++ b/FlashCard/MainWindow.xaml
@@ -15,6 +15,7 @@
                     <MenuItem Header="_Synonyms" Click="Synonym_Click"/>
                     <MenuItem Header="_SynonymsReverse" Click="SynonymReverse_Click"/>
                     <MenuItem Header="_Spelling" Click="Spelling_Click" />
+                    <MenuItem Header="_Pronunciation" Click="MenuItem_Click_2" />
                 </MenuItem>
                 <MenuItem Header="_New word">
                     <MenuItem Header="_Single" Click="SingleWord_Click"/>
