--- a/FlashCard/Pages/ReadFromFile.xaml
+++ b/FlashCard/Pages/ReadFromFile.xaml
@@ -14,7 +14,8 @@
     <Grid Margin="20 0">
         <StackPanel>
             <TextBox x:Name="Cat" Margin="5" Text="0"/>
-            <ScrollViewer x:Name="SV" VerticalAlignment="Top" HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible" Height="850">
+            <TextBox x:Name="Search" Margin="5" TextChanged="Search_TextChanged"/>
+            <ScrollViewer x:Name="SV" VerticalAlignment="Top" HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible" Height="800">
                 <StackPanel x:Name="Words">
                     <StackPanel Margin="0 2" Background="Wheat">
                         <TextBlock>Word:</TextBlock>
