cheking for spelling all

--- a/FlashCard/Pages/ReadFromFile.xaml
+++ b/FlashCard/Pages/ReadFromFile.xaml
@@ -15,11 +15,12 @@
         <StackPanel>
             <StackPanel Orientation="Horizontal" Margin="5">
                 <TextBlock>Meaning:</TextBlock>
-                <TextBox Width="140" x:Name="Cat" Text="0"/>
+                <TextBox Width="50" x:Name="Cat" Text="0"/>
                 <TextBlock>Pron:</TextBlock>
-                <TextBox Width="140" x:Name="Cat3" Text="0"/>
+                <TextBox Width="50" x:Name="Cat3" Text="0"/>
                 <TextBlock>Spelling:</TextBlock>
-                <TextBox Width="140" x:Name="Spel" Text="0"/>
+                <TextBox Width="50" x:Name="Spel" Text="0"/>
+                <CheckBox x:Name="AllSpell" Margin="10,0"/>
             </StackPanel>
             <TextBox x:Name="Search" Margin="5" TextChanged="Search_TextChanged"/>
             <ScrollViewer x:Name="SV" VerticalAlignment="Top" HorizontalAlignment="Stretch" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible" Height="800">
