--- a/FlashCard/MainWindow.xaml
+++ b/FlashCard/MainWindow.xaml
@@ -24,6 +24,7 @@
                     <MenuItem Header="_Update" Click="MenuItem_Click_1"/>
                     <MenuItem Header="_Show" Click="MenuItem_Click" />
                     <MenuItem Header="_Change cat" Click="MenuItem_Click_4"/>
+                    <MenuItem Header="Clear" Click="MenuItem_Click_5"/>
                 </MenuItem>
             </Menu>
         </DockPanel>
